# lib_stm32hal

./: CMakeLists.txt  halBuildSupport.cmake
STM32Cube_Config/: stm32f1xx_hal_conf.h_in  stm32f4xx_hal_conf.h_in
